Fix crash due to dangling pointer

BUG: 281196